--- a/ansible.yml
+++ b/ansible.yml
@@ -1,21 +1,18 @@
-name: Docker configure in EC2 Machine
-hosts: all
-become: true
-connection: ssh
-tasks: 
--name: updating the new Ec2 machine
-command: sudo apt-get update
+---
+- name: Docker configure in EC2 Machine
+  hosts: all
+  become: yes
+  become_user: ubuntu
+  tasks:
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: present
 
+    - name: Start Docker service
+      service:
+        name: docker
+        state: started
 
--name: Install Docker
-command: sudo apt install docker.io
-become: yes
-become_user: root
-
-
--name: Start Docker service
-command: sudo systemctl start docker
-become: yes
-become_user: root
 
 
