--- a/ansible.yml
+++ b/ansible.yml
@@ -24,6 +24,9 @@
       become: yes
       become_user: root
 
-      -name: Deploy the Image and Run as Container
-       command: docker run -itd -p 8084:8081 anamikakumari998/insure_me_app:1.0
+    - name: Deploy the Image and Run as Container
+      command: docker run -itd -p 8084:8081 anamikakumari998/insure_me_app:1.0
+      become: yes
+      become_user: root
+
  
